projects/02-nodejs-api/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          port:
            - containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: database
  ports:
    - port: 3306
      targetPort: 3306
